--- a/BibFile.bib
+++ b/BibFile.bib
@@ -33,6 +33,23 @@
 	file = {Francis_2011_DataWeighting.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\NAQX3IC8\\Francis_2011_DataWeighting.pdf:application/pdf}
 }
 
+@article{methot_adjusting_2011,
+	title = {Adjusting for bias due to variability of estimated recruitments in fishery assessment models},
+	volume = {68},
+	issn = {0706-652X, 1205-7533},
+	url = {http://www.nrcresearchpress.com/doi/abs/10.1139/f2011-092},
+	doi = {10.1139/f2011-092},
+	language = {en},
+	number = {10},
+	urldate = {2016-06-29},
+	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+	author = {Methot, Richard D. and Taylor, Ian G. and Chen, Yong},
+	month = oct,
+	year = {2011},
+	pages = {1744--1760},
+	file = {Methot_and_Taylor_BiasAdjustment.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\59445A8Z\\Methot_and_Taylor_BiasAdjustment.pdf:application/pdf}
+}
+
 @article{punt_quantifying_2008,
 	title = {Quantifying age-reading error for use in fisheries stock assessments, with application to species in {Australia}’s southern and eastern scalefish and shark fishery},
 	volume = {65},
@@ -880,4 +897,21 @@
 	author = {Kristensen, Kasper and Nielsen, A. and Berg, Casper W and Skaug, H. J. and Bell, B.M.},
 	year = {2016},
 	pages = {1--21}
+}
+
+@article{ianelli_simulation_2002,
+	title = {Simulation {Analyses} {Testing} the {Robustness} of {Productivity} {Determinations} from {West} {Coast} {Pacific} {Ocean} {Perch} {Stock} {Assessment} {Data}},
+	volume = {22},
+	issn = {0275-5947, 1548-8675},
+	url = {http://www.tandfonline.com/doi/abs/10.1577/1548-8675%282002%29022%3C0301%3ASATTRO%3E2.0.CO%3B2},
+	doi = {10.1577/1548-8675(2002)022<0301:SATTRO>2.0.CO;2},
+	language = {en},
+	number = {1},
+	urldate = {2017-05-08},
+	journal = {North American Journal of Fisheries Management},
+	author = {Ianelli, James N.},
+	month = feb,
+	year = {2002},
+	pages = {301--310},
+	file = {Simulation Analyses Testing the Robustness of Productivity Determinations from West Coast Pacific Ocean Perch Stock Assessment Data.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\BSRPGJDP\\Simulation Analyses Testing the Robustness of Productivity Determinations from West Coast Pacific Ocean Perch Stock Assessment Data.pdf:application/pdf}
 }
